strip login, add scrollbar and fix css

--- a/novaideo/static/less/novaideo.less
+++ b/novaideo/static/less/novaideo.less
@@ -1,3 +1,7 @@
+.mCSB_inside > .mCSB_container {
+    margin-right: 15px !important;
+}
+
 .carousel-img-modal-container .modal-header button.close{
     font-size: 45px;
     font-weight: 100;
